Bug 62346 - Xephyr does not have GLX since 1.13
Summary: Xephyr does not have GLX since 1.13
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xephyr (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Eric Anholt
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks: xserver-1.13
  Show dependency treegraph
 
Reported: 2013-03-14 17:44 UTC by Sebastien Bacher
Modified: 2013-10-30 18:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
That patch fixes the issue for me (on 1.13.2) (839 bytes, patch)
2013-03-14 18:09 UTC, Sebastien Bacher
no flags Details | Splinter Review
updated patch, in git format, for the current trunk (1.22 KB, patch)
2013-08-23 19:24 UTC, Sebastien Bacher
no flags Details | Splinter Review
updated patch with the right signed-off (1.22 KB, patch)
2013-08-24 09:23 UTC, Sebastien Bacher
no flags Details | Splinter Review

Description Sebastien Bacher 2013-03-14 17:44:13 UTC
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/xorg-server/+bug/1079096

"$ Xephyr :2

$ DISPLAY=:2 glxinfo
Error: couldn't find RGB GLX visual or fbconfig"

The issue happens on Ubuntu quantal or raring with xserver-xephyr 1.13, installing the precise binary (1.12) makes it work
Comment 1 Sebastien Bacher 2013-03-14 17:44:50 UTC
jcristau suggested on IRC that kdrive might need something similar to http://cgit.freedesktop.org/xorg/xserver/commit/?id=ac1a60e7b6f06fd075cc5bf55d6bc67206a01d29
Comment 2 Sebastien Bacher 2013-03-14 18:09:06 UTC
Created attachment 76536 [details] [review]
That patch fixes the issue for me (on 1.13.2)

similar to the commit previously pointed, it does the job it seems ;-)
Comment 3 Eric Anholt 2013-08-23 18:29:05 UTC
Could you provide that patch in git-format-patch form with an appropriate signed-off-by line?
Comment 4 Sebastien Bacher 2013-08-23 19:24:56 UTC
Created attachment 84537 [details] [review]
updated patch, in git format, for the current trunk

> Could you provide that patch in git-format-patch form with an appropriate signed-off-by line?

sure, I guess the signed-off should have your name?

There you go!
Comment 5 Eric Anholt 2013-08-23 20:05:41 UTC
It would hopefully have your name, assuming you're the author of the patch, indicating that you agree with the developer's certificate of origin (https://www.kernel.org/doc/Documentation/SubmittingPatches)
Comment 6 Sebastien Bacher 2013-08-24 09:23:06 UTC
Created attachment 84552 [details] [review]
updated patch with the right signed-off

oh, ok, thanks!
Comment 7 Eric Anholt 2013-08-26 21:00:40 UTC
Thanks!  It's on the list with a fixed up commit message, though it ended up at the *end* of a giant patch series I sent out.  If that all gets stalled I'll try to make sure it makes it in anyway.
Comment 8 Eric Anholt 2013-10-30 18:18:45 UTC
commit abc2bfca16adcd1e5657d4ce54f4e1335d5ed53f
Author: Sebastien Bacher <seb128@ubuntu.com>
Date:   Fri Aug 23 21:21:44 2013 +0200

    kdrive: initialize GLX for xephyr


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.