kdrive: initialize GLX for xephyr

Like commit ac1a60e7b6f06fd075cc5bf55d6bc67206a01d29, re-add
initialization of GLX after it was accidentally dropped from non-Xorg
servers in 5f5bbbe543f65c48ecbb5cce80116a86ca3fbe86.

Signed-off-by: Sebastien Bacher <seb128@ubuntu.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62346
Reviewed-by: Eric Anholt <eric@anholt.net>
Reviewed-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Julien Cristau <jcristau@debian.org>
Signed-off-by: Eric Anholt <eric@anholt.net>